<resources>
    <string name="app_name">ClaseUno</string>
    <string name="username_text">User</string>
    <string name="calculator">CALCULATOR</string>
    <string name="cerrar_sesion">Log Out</string>
    <string name="iniciar_sesion">Log In</string>
    <string name="last_login_date">Last login date:</string>
    <string name="elapsed_time">Elapsed time:</string>
    <string name="hello" formatted = "false">hello %s welcome</string>
</resources>
