<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools   = "http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft  = "@dimen/activity_horizontal_margin"
    android:paddingRight = "@dimen/activity_horizontal_margin"
    android:paddingTop   = "@dimen/activity_vertical_margin"
    tools:context = "claseuno.unam.mx.claseuno.MainActivity">

    <EditText
        android:id="@+id/main_ACT_email"
        android:hint="correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="textPassword"
        android:id="@+id/main_ACT_password"
        android:hint="password"
        android:layout_below="@+id/main_ACT_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:layout_marginTop="16dp"
        android:layout_below="@+id/main_ACT_password"
        android:id="@+id/chkRememberMe"
        android:text="Remember credentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/layout_last_sesion_date"
        android:layout_below="@+id/chkRememberMe"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight=".70"
            android:layout_marginTop="16dp"
            android:text="@string/last_login_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_weight=".30"
            android:layout_marginTop="16dp"
            android:id="@+id/txtLastLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_elapsed_time"
        android:layout_below="@+id/layout_last_sesion_date"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight=".70"
            android:layout_marginTop="16dp"
            android:text="@string/elapsed_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_weight=".30"
            android:layout_marginTop="16dp"
            android:id="@+id/elapsed_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_below="@+id/layout_elapsed_time"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnRegisterLogin"
            android:text="Register"
            android:visibility="visible"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_login"
            android:layout_weight="1"
            android:text="@string/iniciar_sesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_logout"
        android:text="@string/cerrar_sesion"
        android:layout_below="@+id/layout_elapsed_time"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_init_calculator"
        android:text="@string/calculator"
        android:layout_marginTop="100dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>

